C1: Fix output of -XX:+PrintCFGToFile to open it with visualizer

XMLWordPrintable

    • b22

      JDK-8251093 introduced some improved logging which cannot be read by the C1 Visualizer. As the C1 Visualizer is not part of the JDK, we should include the old format again for the output produced by -XX:+PrintCFGToFile to be compatible with the visualizer again. The console output can still use the improved logging of JDK-8251093.

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: