8255245: C1: Fix output of -XX:+PrintCFGToFile to open it with visualizer